# boris

./: CMakeLists.txt  README.md  package.xml
boris_base/: CMakeLists.txt  README.md  package.xml  setup.py
boris_base/config/: odrive_base_config.json
boris_base/launch/: base.launch  base_simulator.launch  odrive.launch
boris_base/nodes/: odrive_node
boris_base/src/boris_base/: odrive_interface.py  odrive_node.py  odrive_simulator.py
boris_base/src/odrive_ros/: odrive_interface.py  odrive_node.py
boris_description/: CMakeLists.txt  package.xml  urdf.rviz
boris_description/config/: joint_names_boris.yaml  joint_names_boris_description.yaml  joint_names_boris_old.yaml
boris_description/launch/: description.launch  display.launch  display2.launch  gazebo-sawr-unmodified.launch  gazebo.launch  urdfTest.launch
boris_description/meshes/: arm_link.STL  base_link.STL  camera.STL  camera_tilt_link.STL  camera_yaw_link.STL  elbow_link.STL  gps_link.STL  imu.STL  left_wheel_link.STL  right_wheel_link.STL  shoulder_link.STL
boris_description/urdf/: boris_description.csv  boris_description.urdf  boris_description_old.csv  boris_description_old.urdf
boris_gimbal/: CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
boris_gimbal/config/: odrive_gimbal_config.json
boris_gimbal/launch/: gimbal.launch  gimbal_simulator.launch
boris_gimbal/nodes/: boris_gimbal_node
boris_gimbal/src/boris_gimbal/: odrive_interface.py  odrive_node.py  odrive_simulator.py
boris_imu/: CMakeLists.txt  package.xml
boris_imu/launch/: imu.launch
boris_localization/: CMakeLists.txt  package.xml
boris_localization/launch/: localization.launch  ublox_gps.launch
boris_localization/params/: ekf_params.yaml  navsat_params.yaml
boris_mapping/: CMakeLists.txt  README.md  package.xml  save_map.sh
boris_mapping/launch/: gmapping.launch  load_map.launch  save_map.launch  start.launch  start_saved.launch
boris_master/: CMakeLists.txt  README.md  init.sh  nox_start.sh  package.xml  start.sh  start_saved.sh
boris_master/launch/: init-dev-only.launch  init.launch  init_0.launch  init_1.launch  init_2.launch  init_3.launch  init_alt_1.launch  init_alt_2.launch  init_tx2.launch  init_tx2_SLAM.launch  init_tx2_nav.launch  init_yoga.launch
boris_master/scripts/: depth.sh  depthL.sh  depthR.sh  image.sh  imageL.sh  imageR.sh  image_with_alt_scan.sh  image_with_multi.sh  image_with_scan.sh  init.sh  init_0.sh  init_1.sh  init_2.sh  init_3.sh  init_alt_2.sh  multi.sh  scan.sh  teleop.sh  viz.sh  xinit.sh  xinit_alt.sh
boris_navigation/: CMakeLists.txt  README.md  package.xml
boris_navigation/launch/: amcl_demo.launch  display.launch  gmapper_demo.launch  gmapping.launch  nav.launch  nav_arg.launch  nav_display.launch  nav_static_map.launch  nav_use_odom.launch  navigation_demo.launch
boris_navigation/launch/includes/: move_base.launch.xml
boris_navigation/param/: costmap_common_params.yaml  custom_costmap_params.yaml  dwa_local_planner_params.yaml  move_base_params.yaml  traj_local_planner_params.yaml
boris_scan/: CMakeLists.txt  README.md  package.xml
boris_scan/launch/: display.launch  inprogress.launch  rs_d435_camera_with_model.launch  scan.launch
boris_teleop/: CMakeLists.txt  README.md  package.xml  setup.py
boris_teleop/launch/: keyboard_teleop.launch
boris_teleop/scripts/: boris_teleop_key  boris_teleop_key.py
config/: joint_names_boris.yaml
launch/: display.launch  gazebo.launch
meshes/: base_link.STL  camera_link.STL  camera_yaw_link.STL
urdf/: boris.urdf
yolo_depth_locator/: CMakeLists.txt  package.xml
yolo_depth_locator/launch/: depth.launch  realsensecustom.launch
yolo_depth_locator/src/: yolo_depth_locator_cpp.cpp
