<?xml version="1.0"?>
<package format="2">
  <name>boris_base</name>
  <version>1.0.0</version>
  <description>ODrive motor controller driver for Boris base</description>
  <license>Modified BSD</license>

  <maintainer email="itsmomito@gmail.com">Moshe Rienhart</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>diagnostic_updater</exec_depend>
  
  <exec_depend>ODrive</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
