<?xml version="1.0"?>
<package>
  <name>boris_mapping</name>
  <version>1.0.0</version>
  <description>Set up Simple Autonomous Wheeled Robot (BORIS) for Mapping</description>
  <maintainer email="itsmomito@gmail.com">Moshe Rienhart</maintainer>
  <license>BSD-3</license>
  <author email="itsmomito@gmail.com">Moshe Rienhart</author> 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gmapping</build_depend>
  <run_depend>boris_description</run_depend>
  <run_depend>boris_base</run_depend>
  <run_depend>boris_scan</run_depend>
  <run_depend>navigation</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>amcl</run_depend>
</package>
