<package>
  <name>boris_teleop</name>
  <version>1.0.0</version>
  <description>Provides teleoperation using joysticks or keyboard.</description>
  <maintainer email="itsmomito@gmail.com">Moshe Rienhart</maintainer>
  <license>BSD</license>
  
  <author email="itsmomito@gmail.com">Moshe Rienhart</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
</package>
